load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")
load("@rules_java//java:defs.bzl", "java_library")
load("@nvcf_java_rules//:defs.bzl", "nvcf_java_library")
load("//tools/bazel:proto.bzl", "nvct_java_grpc_compile")

package(default_visibility = ["//visibility:public"])

# Error Prone runs in the default Bazel Java toolchain; keep the checks the
# service opts out of and enable deprecation lints. --release matches the
# hermetic remotejdk toolchain language level.
NVCT_JAVACOPTS = [
    "--release",
    "25",
    "-Xep:CheckReturnValue:OFF",
    "-Xep:ImpossibleNullComparison:OFF",
    "-Xep:OptionalOfRedundantMethod:OFF",
    "-Xlint:deprecation",
]

# nvcf_java_library does not wire Lombok; add the annotation processor plugin
# plus the neverlink annotations jar to every library that compiles Lombok
# sources. Both targets already exist in tools/bazel.
LOMBOK_PLUGINS = ["//tools/bazel:lombok_plugin"]

LOMBOK_DEPS = ["//tools/bazel:lombok_annotations"]

JUNIT5_RUNTIME_DEPS = [
    "@maven//:org_junit_jupiter_junit_jupiter_engine",
    "@maven//:org_junit_platform_junit_platform_launcher",
    "@maven//:org_junit_platform_junit_platform_reporting",
]

NVCT_CORE_TEST_SRCS = glob(["src/test/java/**/*.java"])

NVCT_CORE_TEST_RESOURCES = glob(["src/test/resources/**"]) + [
    "//:integration_local_env_files",
]

proto_library(
    name = "nvct_proto",
    srcs = ["src/main/proto/nvct.proto"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

nvct_java_grpc_compile(
    name = "nvct_proto_java_grpc_srcs",
    protos = [":nvct_proto"],
)

# rules_proto_grpc_java's convenience java_grpc_library macro hardcodes its
# private @maven runtime hub. Owning this small wrapper keeps all application
# runtime jars in this module's own @maven hub.
java_library(
    name = "nvct_proto_java_grpc",
    srcs = [":nvct_proto_java_grpc_srcs"],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:javax_annotation_javax_annotation_api",
    ],
    exports = [
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:javax_annotation_javax_annotation_api",
    ],
)

nvcf_java_library(
    name = "nvct_core",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = NVCT_JAVACOPTS,
    plugins = LOMBOK_PLUGINS,
    deps = [
        ":nvct_proto_java_grpc",
        "@maven//:com_bucket4j_bucket4j_jdk17_core",
        "@maven//:commons_codec_commons_codec",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_github_ben_manes_caffeine_guava",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_nimbusds_oauth2_oidc_sdk",
        "@nv_boot_parent//nv-boot-starter-audit:nv_boot_starter_audit",
        "@nv_boot_parent//nv-boot-starter-cassandra:nv_boot_starter_cassandra",
        "@nv_boot_parent//nv-boot-starter-core:nv_boot_starter_core",
        "@nv_boot_parent//nv-boot-starter-exceptions:nv_boot_starter_exceptions",
        "@nv_boot_parent//nv-boot-starter-observability:nv_boot_starter_observability",
        "@nv_boot_parent//nv-boot-starter-registries:nv_boot_starter_registries",
        "@nv_boot_parent//nv-boot-starter-reloadable-properties:nv_boot_starter_reloadable_properties",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_micrometer_micrometer_core",
        "@maven//:io_micrometer_micrometer_observation",
        "@maven//:io_micrometer_micrometer_registry_prometheus",
        "@maven//:io_micrometer_micrometer_tracing",
        "@maven//:io_swagger_core_v3_swagger_annotations_jakarta",
        "@maven//:io_swagger_core_v3_swagger_models_jakarta",
        "@maven//:io_netty_netty_transport",
        "@maven//:io_netty_netty_handler",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:jakarta_servlet_jakarta_servlet_api",
        "@maven//:jakarta_validation_jakarta_validation_api",
        "@maven//:net_devh_grpc_server_spring_boot_starter",
        "@maven//:net_javacrumbs_shedlock_shedlock_core",
        "@maven//:net_javacrumbs_shedlock_shedlock_provider_cassandra",
        "@maven//:net_javacrumbs_shedlock_shedlock_spring",
        "@maven//:org_apache_cassandra_java_driver_metrics_micrometer",
        "@maven//:org_apache_cassandra_java_driver_core",
        "@maven//:org_apache_cassandra_java_driver_query_builder",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_hibernate_validator_hibernate_validator",
        "@maven//:org_jspecify_jspecify",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springdoc_springdoc_openapi_starter_common",
        "@maven//:org_springdoc_springdoc_openapi_starter_webmvc_api",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_actuator",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_micrometer_metrics",
        "@maven//:org_springframework_boot_spring_boot_starter_aspectj",
        "@maven//:org_springframework_boot_spring_boot_starter_jackson",
        "@maven//:org_springframework_boot_spring_boot_starter_security",
        "@maven//:org_springframework_boot_spring_boot_starter_security_oauth2_client",
        "@maven//:org_springframework_boot_spring_boot_starter_security_oauth2_resource_server",
        "@maven//:org_springframework_boot_spring_boot_starter_validation",
        "@maven//:org_springframework_boot_spring_boot_starter_webmvc",
        "@maven//:org_springframework_cloud_spring_cloud_context",
        "@maven//:org_springframework_cloud_spring_cloud_starter_kubernetes_client_config",
        "@maven//:org_springframework_data_spring_data_cassandra",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_spring_aop",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_context_support",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_expression",
        "@maven//:org_springframework_spring_tx",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_webflux",
        "@maven//:org_springframework_spring_webmvc",
        "@maven//:org_springframework_retry_spring_retry",
        "@maven//:org_springframework_security_spring_security_config",
        "@maven//:org_springframework_security_spring_security_core",
        "@maven//:org_springframework_security_spring_security_oauth2_client",
        "@maven//:org_springframework_security_spring_security_oauth2_core",
        "@maven//:org_springframework_security_spring_security_oauth2_jose",
        "@maven//:org_springframework_security_spring_security_oauth2_resource_server",
        "@maven//:org_springframework_security_spring_security_web",
        "@maven//:io_projectreactor_reactor_core",
        "@maven//:io_projectreactor_netty_reactor_netty_core",
        "@maven//:io_projectreactor_netty_reactor_netty_http",
        "@maven//:tools_jackson_core_jackson_core",
        "@maven//:tools_jackson_core_jackson_databind",
        "@maven//:tools_jackson_module_jackson_module_blackbird",
    ] + LOMBOK_DEPS,
)

NVCT_CORE_TEST_DEPS = [
    ":nvct_core",
    ":nvct_proto_java_grpc",
    "@maven//:org_apache_cassandra_java_driver_core",
    "@maven//:org_apache_cassandra_java_driver_guava_shaded",
    "@maven//:com_google_guava_guava",
    "@maven//:com_google_protobuf_protobuf_java",
    "@maven//:com_nimbusds_nimbus_jose_jwt",
    "@nv_boot_parent//nv-boot-mock-servers-test:nv_boot_mock_servers_test",
    "@nv_boot_parent//nv-boot-starter-audit:nv_boot_starter_audit",
    "@nv_boot_parent//nv-boot-starter-core:nv_boot_starter_core",
    "@nv_boot_parent//nv-boot-starter-exceptions:nv_boot_starter_exceptions",
    "@nv_boot_parent//nv-boot-starter-observability:nv_boot_starter_observability",
    "@nv_boot_parent//nv-boot-starter-registries:nv_boot_starter_registries",
    "@nv_boot_parent//nv-boot-starter-reloadable-properties:nv_boot_starter_reloadable_properties",
    "@maven//:io_grpc_grpc_api",
    "@maven//:io_grpc_grpc_stub",
    "@maven//:io_micrometer_micrometer_core",
    "@maven//:io_opentelemetry_opentelemetry_api",
    "@maven//:io_opentelemetry_opentelemetry_sdk_testing",
    "@maven//:io_opentelemetry_opentelemetry_sdk_trace",
    "@maven//:io_projectreactor_reactor_core",
    "@maven//:io_projectreactor_netty_reactor_netty_core",
    "@maven//:jakarta_annotation_jakarta_annotation_api",
    "@maven//:jakarta_validation_jakarta_validation_api",
    "@maven//:net_minidev_json_smart",
    "@maven//:org_apache_commons_commons_lang3",
    "@maven//:org_apache_logging_log4j_log4j_api",
    "@maven//:org_assertj_assertj_core",
    "@maven//:org_awaitility_awaitility",
    "@maven//:org_junit_jupiter_junit_jupiter_api",
    "@maven//:org_junit_jupiter_junit_jupiter_params",
    "@maven//:org_mockito_mockito_core",
    "@maven//:org_mockito_mockito_junit_jupiter",
    "@maven//:org_springframework_boot_spring_boot",
    "@maven//:org_springframework_boot_spring_boot_autoconfigure",
    "@maven//:org_springframework_boot_spring_boot_micrometer_tracing",
    "@maven//:org_springframework_boot_spring_boot_restclient",
    "@maven//:org_springframework_boot_spring_boot_resttestclient",
    "@maven//:org_springframework_boot_spring_boot_security",
    "@maven//:org_springframework_boot_spring_boot_starter_data_cassandra_test",
    "@maven//:org_springframework_boot_spring_boot_starter_webmvc_test",
    "@maven//:org_springframework_boot_spring_boot_test",
    "@maven//:org_springframework_boot_spring_boot_test_autoconfigure",
    "@maven//:org_slf4j_slf4j_api",
    "@maven//:org_springframework_data_spring_data_cassandra",
    "@maven//:org_springframework_spring_beans",
    "@maven//:org_springframework_spring_context",
    "@maven//:org_springframework_spring_core",
    "@maven//:org_springframework_spring_test",
    "@maven//:org_springframework_spring_web",
    "@maven//:org_springframework_spring_webflux",
    "@maven//:org_springframework_spring_webmvc",
    "@maven//:org_testcontainers_testcontainers",
    "@maven//:org_testcontainers_testcontainers_cassandra",
    "@maven//:tools_jackson_core_jackson_core",
    "@maven//:tools_jackson_core_jackson_databind",
    "@maven//:org_wiremock_wiremock_standalone",
] + LOMBOK_DEPS

# Compiled test classes, reused by the nvct-service integration test module.
nvcf_java_library(
    name = "nvct_core_test_fixtures",
    testonly = True,
    srcs = NVCT_CORE_TEST_SRCS,
    javacopts = NVCT_JAVACOPTS,
    plugins = LOMBOK_PLUGINS,
    resources = NVCT_CORE_TEST_RESOURCES,
    deps = NVCT_CORE_TEST_DEPS,
)

java_junit5_test(
    name = "tests",
    size = "large",
    test_class = "com.nvidia.nvct.rest.task.TaskManagementControllerTest",
    # Spring Framework 7 pauses cached contexts when switching configurations.
    # The embedded gRPC server cannot reliably rebind its random port during
    # that pause/restart cycle on Linux, so retain the pre-Spring-7 lifecycle.
    jvm_flags = ["-Dspring.test.context.cache.pause=never"],
    data = [
        "//:integration_local_env",
    ],
    tags = [
        # Testcontainers/Cassandra integration test. Runs in the dedicated
        # Docker (DinD) integration lane, which selects targets by the
        # "requires-docker" tag; the fast matrix excludes it via
        # --test_tag_filters=-requires-docker. The test sources still compile in
        # the build step via :nvct_core_test_fixtures.
        "exclusive",
        "requires-docker",
    ],
    timeout = "long",
    runtime_deps = [":nvct_core_test_fixtures"] + JUNIT5_RUNTIME_DEPS,
)
