load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test")
load("@nvcf_java_rules//:defs.bzl", "nvcf_java_library", "nvcf_spring_boot_image")

package(default_visibility = ["//visibility:public"])

# Error Prone runs in the default Bazel Java toolchain; keep the checks the
# service opts out of and enable deprecation lints. --release matches the
# hermetic remotejdk toolchain language level.
NVCT_JAVACOPTS = [
    "--release",
    "25",
    "-Xep:CheckReturnValue:OFF",
    "-Xep:ImpossibleNullComparison:OFF",
    "-Xep:OptionalOfRedundantMethod:OFF",
    "-Xlint:deprecation",
]

# nvcf_java_library does not wire Lombok; add the annotation processor plugin
# plus the neverlink annotations jar to every library that compiles Lombok
# sources. Both targets already exist in tools/bazel.
LOMBOK_PLUGINS = ["//tools/bazel:lombok_plugin"]

LOMBOK_DEPS = ["//tools/bazel:lombok_annotations"]

JUNIT5_RUNTIME_DEPS = [
    "@maven//:org_junit_jupiter_junit_jupiter_engine",
    "@maven//:org_junit_platform_junit_platform_launcher",
    "@maven//:org_junit_platform_junit_platform_reporting",
]

nvcf_java_library(
    name = "app_classes",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = NVCT_JAVACOPTS,
    plugins = LOMBOK_PLUGINS,
    resource_strip_prefix = "nvct-service/src/main/resources",
    resources = glob(["src/main/resources/**"]),
    deps = [
        "//nvct-core:nvct_core",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_loader",
        "@maven//:org_springframework_boot_spring_boot_micrometer_tracing",
        "@maven//:org_springframework_boot_spring_boot_security",
    ] + LOMBOK_DEPS,
)

# Multi-arch OCI image (exploded classpath under /app/lib). Build-only for now:
# no registry = ... is set, so no :image_push target is emitted. :image_index
# carries the amd64 + arm64 manifest.
nvcf_spring_boot_image(
    name = "image",
    main_class = "com.nvidia.nvct.App",
    deps = [":app_classes"],
)

java_junit5_test(
    name = "tests",
    size = "large",
    srcs = glob(["src/test/java/**/*.java"]),
    test_class = "com.nvidia.nvct.NvctServiceIntegrationTest",
    javacopts = NVCT_JAVACOPTS,
    plugins = LOMBOK_PLUGINS,
    resources = glob(["src/test/resources/**"]) + [
        "//:integration_local_env_files",
    ],
    data = [
        "//:integration_local_env",
    ],
    tags = [
        # Full Spring context + Testcontainers integration test. Runs in the
        # dedicated Docker (DinD) integration lane (selected by "requires-docker");
        # the fast matrix excludes it via --test_tag_filters=-requires-docker.
        "exclusive",
        "requires-docker",
    ],
    timeout = "long",
    deps = [
        ":app_classes",
        "//nvct-core:nvct_core",
        "//nvct-core:nvct_core_test_fixtures",
        "@nv_boot_parent//nv-boot-mock-servers-test:nv_boot_mock_servers_test",
        "@maven//:io_opentelemetry_opentelemetry_sdk_testing",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_junit_jupiter",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_boot_spring_boot_test_autoconfigure",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_restclient",
        "@maven//:org_springframework_boot_spring_boot_resttestclient",
        "@maven//:org_springframework_boot_spring_boot_starter_webmvc_test",
        "@maven//:org_springframework_boot_spring_boot_web_server",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_webmvc",
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:org_testcontainers_testcontainers_cassandra",
    ] + LOMBOK_DEPS,
    runtime_deps = JUNIT5_RUNTIME_DEPS,
)
