# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@gazelle//:def.bzl", "gazelle_test")

# gazelle:prefix github.com/NVIDIA/nvcf/src/libraries/go/lib
# gazelle:exclude vendor
# gazelle:exclude testdata
# Phase 1 keeps protobuf out of the toolchain; pre-generated .pb.go files are
# treated as plain Go sources. Re-enable when protobuf/rules_proto land in
# MODULE.bazel.
# gazelle:proto disable_global
# Disambiguate consumers of the errors API that gazelle would otherwise leave
# with an empty deps list because the proto package historically defined two
# rules with the same importpath (nverrors_go_proto and errors).
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/nvkit/api/errors/v1 //src/libraries/go/lib/pkg/nvkit/api/errors/v1:errors

gazelle_test(
    name = "gazelle_test",
    extra_args = ["src/libraries/go/lib"],
    workspace = "//:BUILD.bazel",
)

# Transitional non-hermetic wrapper: this shells out to `go run` through the
# shared golangci-lint runner. Keep cache-disabled tags until lint inputs are
# declared in Bazel.
sh_test(
    name = "golangci_lint",
    timeout = "long",
    srcs = ["//rules/golangci:golangci_lint.sh"],
    args = [
        "--dir",
        "src/libraries/go/lib",
        "--config",
        "src/libraries/go/lib/.golangci.yml",
        "--modules-download-mode",
        "vendor",
    ],
    env_inherit = ["PATH"],
    tags = [
        "local",
        "manual",
        "no-cache",
        "no-remote-cache",
        "no-sandbox",
    ],
    visibility = ["//visibility:public"],
)
